[package]
name = "rscmm"
version = "0.3.0"
edition = "2021"
rust-version = "1.57"
authors = ["chaos <mkchaos@outlook.com>"]
description = "A Simple C-interpreter"
readme = "README.md"
repository = "https://github.com/mkchaos/rsc/"
license = "MIT"
keywords = ["interpreter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.23"
strum_macros = "0.23"